add the roundStatus class