@@ -5,16 +5,18 @@ import java.util.stream.Collectors;
 
 class RacingGame {
     private List<Car> cars;
+    private int round = 0;
 
     public RacingGame(List<String> names) {
         // stream은 names를 차례로 처리 -> "name1", "name2" ...
         // map은 Car 객체로 변환 -> Car("name1"), Car("name2") ...
         // collect는 List로 변환 -> [Car("name1"), Car("name2"), ...]
         // 최종적으로 this.cars에 리스트로 된 객체 Car들을 저장
-        this.cars = names.stream().map(String::trim).map(Car::new).collect(Collectors.toList());
+        this.cars = names.stream().map(Car::new).toList();
     }
 
-    public void play() {
+    public void playNextRound() {
+        round += 1;
         for (Car car : cars) {
             car.move();
         }
@@ -36,5 +38,15 @@ class RacingGame {
             }
         }
         return winner;
+    }
+
+    public RoundStatus getRoundStatus() {
+        List<CarStatus> carStatusList = cars.stream()
+                .map(it -> new CarStatus(
+                        it.getName(),
+                        it.getPosition(),
+                        round))
+                .toList();
+        return new RoundStatus(round, carStatusList);
     }
 }
